# longcovid

./: .env.example  .gitignore  AgentsInActionLongCOVID.docx  LICENSE  README.md  pyproject.toml  training_data.pkl
reports-4o-mini/analysis/: analyze_epidemiological_data_task.md
reports-4o-mini/management/: facilitate_collaboration_task.md
reports-4o-mini/mechanisms/: analyze_microbiome_impact_task.md  apply_advanced_immunological_techniques_task.md  conduct_mechanism_research_task.md  investigate_immune_responses_task.md  investigate_metabolic_disruptions_task.md  research_latent_viral_infections_task.md
reports-4o-mini/treatments/: develop_combination_treatments_task.md  identify_therapeutics_task.md
reports-4o/analysis/: analyze_data_trends_task.md  analyze_epidemiological_data_task.md
reports-4o/final/: compile_final_report_task.md  plan_future_research_task.md
reports-4o/management/: ensure_quality_and_alignment_task.md  facilitate_collaboration_task.md  update_shared_memory_task.md
reports-4o/mechanisms/: analyze_microbiome_impact_task.md  analyze_spike_protein_translocation_task.md  apply_advanced_immunological_techniques_task.md  assess_cardiovascular_complications_task.md  conduct_mechanism_research_task.md  explore_viral_persistence_task.md  investigate_NK_and_T_cell_dynamics_task.md  investigate_immune_responses_task.md  investigate_metabolic_disruptions_task.md  investigate_neurological_manifestations_task.md  research_latent_viral_infections_task.md  study_transcriptomics_task.md
reports-4o/treatments/: develop_combination_treatments_task.md  (+1 more)
(+27 files in other folders)
