[project]
name = "longcovid"
version = "0.1.0"
description = "longcovid multi-agent research project"
authors = [{ name = "Jon Douglas", email = "jondouglasdev@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0",
    "xmltodict>=0.14.2",
    "semanticscholar>=0.8.4"
]

[project.scripts]
longcovid = "longcovid.main:run"
run_crew = "longcovid.main:run"
train = "longcovid.main:train"
replay = "longcovid.main:replay"
test = "longcovid.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"